--- a/rqt_logger_level/src/rqt_logger_level/logger_level.ui
+++ b/rqt_logger_level/src/rqt_logger_level/logger_level.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Setup</string>
+   <string>Logger Level</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
